link ui's using navigation graph,movies android library to app main module

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation project(':datasource')
+    implementation project(':movies')
     implementation "androidx.navigation:navigation-fragment:$navigationVersion" // For Kotlin use navigation-fragment-ktx
     implementation "androidx.navigation:navigation-ui:$navigationVersion" // For Kotlin use navigation-ui-ktx
 
