--- a/movies/build.gradle
+++ b/movies/build.gradle
@@ -30,9 +30,12 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.1'
     implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    //datasource library
+    implementation project(':datasource')
 
     implementation "androidx.navigation:navigation-fragment:$navigationVersion" // For Kotlin use navigation-fragment-ktx
     implementation "androidx.navigation:navigation-ui:$navigationVersion" // For Kotlin use navigation-ui-ktx
