--- a/movies/build.gradle
+++ b/movies/build.gradle
@@ -60,11 +60,11 @@ dependencies {
     implementation "com.google.dagger:dagger-android-support:$daggerVersion" // if you use the support libraries
     kapt "com.google.dagger:dagger-android-processor:$daggerVersion"
 
-    //glide
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    //picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
 }
 repositories {
     mavenCentral()
+    jcenter()
 }
