--- a/movies/src/main/AndroidManifest.xml
+++ b/movies/src/main/AndroidManifest.xml
@@ -1,5 +1,9 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.sammy.movies">
 
-    /
+    <application>
+        <activity android:name=".details.MovieDetailsActivity"></activity>
+    </application>
+
 </manifest>
