--- a/movies/build.gradle
+++ b/movies/build.gradle
@@ -63,6 +63,10 @@ dependencies {
     //picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
 
+    //glide
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+
 }
 repositories {
     mavenCentral()
